--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
   <link rel="stylesheet" href="./assets/css/global.css">
   <link rel="stylesheet" href="./assets/css/cabecalho.css">
   <link rel="stylesheet" href="./assets/css/main.css">
+  <link rel="stylesheet" href="./assets/css/main/introduca.css">
+  <link rel="stylesheet" href="./assets/css/main/beneficios.css">
+  <link rel="stylesheet" href="./assets/css/main/ultimos-artigos.css">
   <link rel="stylesheet" href="./assets/css/footer.css">
 </head>
 <body>
@@ -30,11 +33,17 @@
     
     <button class="request">Request Invite</button>
 
+    <button class="hamburger">
+      <img src="./assets/images/icon-hamburger.svg" alt="">
+    </button>
+
   </header>
 
   <main>
 
     <section class="introducao container">
+
+      <img src="./assets/images/bg-intro-mobile.svg" alt="Ilustração Mockups" class="mockups-mobile">
 
       <div class="apresentacao">
         <h1 class="titulo-principal">Next generation digital banking</h1>
@@ -51,7 +60,7 @@
 
     </section>
     
-    <img src="./assets/images/image-mockups.png" alt="Ilustração Mockups" class="mockups">
+    <img src="./assets/images/image-mockups.png" alt="Ilustração Mockups" class="mockups-desktop">
 
     <section class="beneficios container">
 
@@ -166,6 +175,7 @@
       </div>
 
     </section>
+
   </main>
 
   <footer class="rodape container">
